unused applications/open-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-http-route
  namespace: open-webui
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: https-listener
  hostnames:
    - ai.promotesudbury.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: my-open-webui
          port: http
